样式调整及数据目录动态和静态资源目录调整，专题应用优化 table style

--- a/sources/admin/sidebar/view.html
+++ b/sources/admin/sidebar/view.html
@@ -1,7 +1,7 @@
 <main id="admin-sidebar">
   <section class="side">
     <div class=" side bg-fff">
-      <ul class="interaction-menuList b-DF" style="min-height:637px;margin-bottom:60px;">
+      <ul class="interaction-menuList b-DF">
         <li>
           <router-link to="/layout/admin/applyList"><i class="fa fa-list-alt"></i>申请列表</router-link>
         </li>
