--- a/sources/catalog/depCardingCatalog/view.html
+++ b/sources/catalog/depCardingCatalog/view.html
@@ -26,7 +26,7 @@
             </td>
             <td @click="openDep"><span v-show="isActive">展开</span><span v-show="!isActive">收起</span><i :class="{'el-icon-arrow-right':isActive,'el-icon-arrow-down':!isActive}"></i></td>
           </tr>
-          <tr v-show="showDepFid">
+          <!-- <tr v-show="showDepFid">
             <td class="title">下设机构：</td>
             <td>
               <ul class="data-ul" v-bind:class="{'max_height':fidActive,'auto_height':!fidActive}">
@@ -34,8 +34,8 @@
               </ul>
             </td>
            <td @click="openFid"><span v-show="fidActive">展开</span><span v-show="!fidActive">收起</span><i :class="{'el-icon-arrow-right':fidActive,'el-icon-arrow-down':!fidActive}"></i></td>
-          </tr>
-          <tr class="type">
+          </tr> -->
+          <!-- <tr class="type">
             <td class="title">类型：</td>
             <td>
               <ul class="data-ul">
@@ -43,7 +43,7 @@
               </ul>
             </td>
             <td></td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
