--- a/sources/interaction/container/aboutUs/view.html
+++ b/sources/interaction/container/aboutUs/view.html
@@ -1,4 +1,5 @@
 <main id="aboutUs">
+  <p class="title_des">关于我们</p>
   <div v-if="aboutUsInfo" v-html="aboutUsInfo.content">
     <!-- <h4 class="text-center">网站简介</h4> -->
     <!-- <p>
