--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -1,4 +1,5 @@
 <main id="hot-message">
+  <p class="title_des">最热消息</p>
   <nav class="navigator">
     <el-tabs v-model="activeName" @tab-click="handleClick">
       <el-tab-pane label="最新资源" name="latestResources">
