--- a/sources/interaction/container/interactionAdvice/view.html
+++ b/sources/interaction/container/interactionAdvice/view.html
@@ -1,5 +1,5 @@
 <main id="interaction-advice">
-
+<p class="title_des">咨询建议</p>
   <el-form :model="ruleForm" ref="ruleForm" label-width="100px" class="demo-ruleForm">
     <el-row>
       <el-col :span="14" :offset="1">
