--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -1,42 +1,62 @@
 <main id="resources-department">
-	<!-- <div class="catalog-content"> -->
-		<!-- <div class="head-desc">
+  <!-- <div class="catalog-content"> -->
+  <!-- <div class="head-desc">
 			<div class="title">{{head_title}}</div>
 			<div class="other-info">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}} 个项业务</div>
 		</div> -->
-		<div class="search-box" :style="showStyle" ref="search">
-			<div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
-			<div class="search-input">
-				<el-input placeholder="请输入业务事项" v-model="keyword">
-				<el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
-				</el-input>
-			</div>
-		</div>
-		<div :style="showStyle"  ref="business">
-			<el-table :data="tableData"	border	style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty"
-			highlight-current-row   @current-change="handleCurrentChange">
-			<el-table-column prop="activity_name" label="业务事项" ></el-table-column>
-			<el-table-column prop="service_target" label="服务对象"></el-table-column>
-			<el-table-column prop="dept_name" label="所属部门" >
-			<!-- <template scope="scope">
+  <div class="search-box" :style="showStyle" ref="search">
+    <div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
+    <div class="search-input">
+      <el-input placeholder="请输入业务事项" v-model="keyword">
+        <el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
+      </el-input>
+    </div>
+  </div>
+  <div :style="showStyle" ref="business">
+    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
+      @current-change="handleCurrentChange">
+      <el-table-column label="业务事项">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.activity_name">{{scope.row.activity_name}}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="服务对象">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.service_target">{{scope.row.service_target}}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="所属部门">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.dept_name">{{scope.row.dept_name}}</span>
+          </div>
+        </template>
+        <!-- <template scope="scope">
 			{{ dept_name }}
 			</template> -->
-			</el-table-column>
-			<el-table-column label="更新时间" >
-			<template scope="scope">
-			{{ scope.row.update_time | formatDate }}
-			</template>
-			</el-table-column>
-		<el-table-column label="详情" width="80">
-      <template slot-scope="scope">
-        <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
-      </template>
-    </el-table-column>
-			</el-table>
-			<el-pagination  @current-change="handlePageChange" :current-page="currentPage"  :page-size="20" layout="total, prev, pager, next, jumper" :total="totalResource">
-	    	</el-pagination>
-    </div>
+      </el-table-column>
+      <el-table-column label="更新时间">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.update_time">{{ scope.row.update_time | formatDate }}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="详情" width="80">
+        <template slot-scope="scope">
+          <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
+        </template>
+      </el-table-column>
+    </el-table>
+    <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="20" layout="total, prev, pager, next, jumper"
+      :total="totalResource">
+    </el-pagination>
+  </div>
   <!-- </div> -->
   <el-login v-if="showDialogComponent"></el-login>
 
