--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -1,4 +1,5 @@
 <main id="require-survey">
+  <p class="title_des">应用需求反馈</p>
   <div :style="showStyle">
     <el-form :model="ruleForm" :rules="rules2" ref="ruleForm" label-width="110px" class="demo-ruleForm">
       <el-row>
@@ -11,7 +12,7 @@
       <el-row>
         <el-col :span="16" :offset="1">
           <!-- 部门单选 -->
-          <el-form-item label="需求详情" label-suffix="sfdfsd">
+          <el-form-item label="需求详情" label-suffix="sfdfsd" style="margin-bottom:0px;">
             <el-row>
               <el-col :span="23" :offset="1">
                 <el-form-item label="需求类型" prop="requirementType" label-suffix="sfdfsd">
