关联资源隐藏

--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -47,7 +47,7 @@
             :total="totalResource">
           </el-pagination>
         </el-tab-pane>
-        <el-tab-pane label="关联资源" name="interfaceinfo">
+        <!-- <el-tab-pane label="关联资源" name="interfaceinfo">
           <el-table :data="tableDataItem" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
             <el-table-column label="信息资源名称">
               <template scope="scope">
@@ -104,7 +104,7 @@
               </template>
             </el-table-column>
           </el-table>
-        </el-tab-pane>
+        </el-tab-pane> -->
       </el-tabs>
     </div>
   </div>
