--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -50,7 +50,7 @@
             </el-table-column>
           </el-table>
 				</el-tab-pane>
-				<el-tab-pane label="关联资源" name="interfaceinfo">
+				<!-- <el-tab-pane label="关联资源" name="interfaceinfo">
 					 <el-table :data="tableDataItem" border style="width: 100%" tooltip-effect="dark" v-loading="loading" element-loading-text="数据加载中">
             <el-table-column label="信息资源名称">
               <template scope="scope">
@@ -107,7 +107,8 @@
           </template>
         </el-table-column>
           </el-table>
-				</el-tab-pane>
+				</el-tab-pane> -->
+        
         <!-- <el-tab-pane label="接口说明" name="interfaceinfo">
 		<p v-show="tableInterfaces.length == 0">暂无接口说明</p>
 				 <div v-show="tableInterfaces.length > 0"><el-table
