--- a/sources/index.html
+++ b/sources/index.html
@@ -18,9 +18,9 @@
       window.url = {
         // master: "http://172.16.8.84:8080/sharedportal"
         // master: "http://172.16.8.69:8080/sharedportal"
-         master: "http://178.25.2.206/sharedportal"
+        //  master: "http://178.25.2.206/sharedportal"
        // master: "http://localhost:8001/server"
-        // master: location.protocol + '//' + location.host + '/sharedportal' // release
+        master: location.protocol + '//' + location.host + '/sharedportal' // release
       }
     })(window);
 
