--- a/sources/catalog/view.html
+++ b/sources/catalog/view.html
@@ -7,11 +7,11 @@
     </aside>
       <router-view class="router-catalog" :key="key"></router-view>  
   </div>
-   <section class="float-profile">
+   <!-- <section class="float-profile">
     <a v-bind:href="sysObj.xuanfu1" class="share-link" target="_blank"><img src="../assets/ico/share.png" /><p>共享</p></a>
     <ul class="other-link">
       <li><a v-bind:href="sysObj.xuanfu2" class="share-link" target="_blank"><img src="../assets/ico/open.png" /></a><p>开放</p></li>
       <li><a v-bind:href="sysObj.xuanfu3" class="share-link" target="_blank"><img src="../assets/ico/theme.png" /></a><p>主题</p></li>
     </ul>
-  </section>  
+  </section>   -->
 </main>
