合并后处理 BUG #48029【登陆页面】登陆页面图中多了个logo字段

--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -2,7 +2,7 @@
   <header>
     <section class="top_conttitle">
        <router-link to="/layout/dashboard">
-      <img class="logopng" v-bind:src="sysObj.defaultIcon" alt="logo" width="56" height="56">
+      <img class="logopng" v-bind:src="sysObj.defaultIcon"  width="56" height="56">
       <p>{{sysObj.projectPortalName}}</p>
        </router-link>
       <div class="righttext">
