动态资源静态资源 所属系统跳转，系统详情接口

--- a/sources/catalog/details/item/view.html
+++ b/sources/catalog/details/item/view.html
@@ -10,11 +10,11 @@
 			</tr>
 			<tr class="">
 				<td>下设机构</td>
-				<td>{{itemDetail.orgName}}</td>
+				<td>{{itemDetail.dept_name}}</td>
 			</tr>
 			<tr class="">
 				<td>业务事项</td>
-				<td>{{itemDetail.itemDesc}}</td>
+				<td>{{itemDetail.activity_name}}</td>
 			</tr>
 			<tr class="">
 				<td>共享类型</td>
