--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -7,6 +7,7 @@
       <tbody>
         <tr class="">
           <td width="20%">表英文名</td>
+          <!-- <td v-if="">{{detail_pro.enName}}</td> -->
           <td>{{detail_pro.enName}}</td>
         </tr>
         <tr class="">
@@ -50,54 +51,61 @@
             </el-table-column>
           </el-table>
 				</el-tab-pane>
-				<!-- <el-tab-pane label="关联资源" name="interfaceinfo">
-					 <el-table :data="tableDataItem" border style="width: 100%" tooltip-effect="dark" v-loading="loading" element-loading-text="数据加载中">
-            <el-table-column label="信息资源名称">
+				 <el-tab-pane label="关联资源" name="interfaceinfo">
+					 <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading" element-loading-text="数据加载中">
+            <el-table-column label="所属目录">
               <template scope="scope">
                 <div class="over_space">
-                  <span v-bind:title="scope.row.name">{{scope.row.name}}</span>
+                  <span v-bind:title="scope.row.classify_structure_name">{{scope.row.classify_structure_name}}</span>
                 </div>
               </template>
             </el-table-column>
-            <el-table-column label="接口状态">
+            <el-table-column label="信息资源名称">
+              <template scope="scope">
+                <div class="over_space">
+                  <span v-bind:title="scope.row.dataset_name">{{scope.row.dataset_name}}</span>
+                </div>
+              </template>
+            </el-table-column>
+            <!-- <el-table-column label="接口状态">
               <template scope="scope">
                 <div class="over_space">
                   <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
                 </div>
               </template>
-						</el-table-column>
-						<el-table-column label="收藏">
+						</el-table-column> -->
+						<el-table-column label="是否收藏">
               <template scope="scope">
                 <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
+                  <span v-bind:title="scope.row.collection">{{scope.row.collection}}</span>
                 </div>
               </template>
 						</el-table-column>
 						<el-table-column label="纠错内容">
               <template scope="scope">
                 <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
+                  <span v-bind:title="scope.row.correct_content">{{scope.row.correct_content}}</span>
                 </div>
               </template>
 						</el-table-column>
-						<el-table-column label="评分">
+						<!-- <el-table-column label="评分">
               <template scope="scope">
                 <div class="over_space">
                   <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
                 </div>
               </template>
-						</el-table-column>
-							<el-table-column label="是否申请">
+						</el-table-column> -->
+							<!-- <el-table-column label="是否申请">
               <template scope="scope">
                 <div class="over_space">
                   <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
                 </div>
               </template>
-						</el-table-column>
+						</el-table-column> -->
 							<el-table-column label="审核结果">
               <template scope="scope">
                 <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
+                  <span v-bind:title="scope.row.apply_result">{{scope.row.apply_result}}</span>
                 </div>
               </template>
 						</el-table-column>
@@ -107,7 +115,7 @@
           </template>
         </el-table-column>
           </el-table>
-				</el-tab-pane> -->
+				</el-tab-pane> 
         
         <!-- <el-tab-pane label="接口说明" name="interfaceinfo">
 		<p v-show="tableInterfaces.length == 0">暂无接口说明</p>
