style 工具 所属系统style

--- a/sources/catalog/details/view.html
+++ b/sources/catalog/details/view.html
@@ -31,7 +31,7 @@
         </tr>
         <tr class="" v-if="detail_pro.system_info">
           <td>所属系统</td>
-          <td><a @click="jumpToSystem(systemInfo)">{{systemInfo.system_name}}</a></td>
+          <td><a @click="jumpToSystem(systemInfo)" class="jump_system">{{systemInfo.system_name}}</a></td>
         </tr>
       </tbody>
     </table>
