--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -48,7 +48,7 @@
           </el-pagination>
         </el-tab-pane>
          <el-tab-pane label="关联资源" name="interfaceinfo">
-          <el-table :data="tableDataItem" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
+          <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
                        <el-table-column label="所属目录">
               <template scope="scope">
                 <div class="over_space">
