--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -52,7 +52,7 @@
           </el-table>
 				</el-tab-pane>
 				 <el-tab-pane label="关联资源" name="interfaceinfo">
-					 <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading" element-loading-text="数据加载中">
+					 <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
             <el-table-column label="所属目录">
               <template scope="scope">
                 <div class="over_space">
