--- a/sources/admin/container/bug/view.html
+++ b/sources/admin/container/bug/view.html
@@ -28,10 +28,10 @@
             </div>
           </template>
         </el-table-column>
-        <el-table-column label="更新时间" width="180">
+        <el-table-column label="更新时间" width="100">
           <template scope="scope">
             <div class="over_space">
-              <span v-bind:title="scope.row.correct_date">{{scope.row.correct_date}}</span>
+              <span v-bind:title="scope.row.correct_date">{{scope.row.correct_date | formatDate}}</span>
             </div>
           </template>
         </el-table-column>
