--- a/sources/admin/container/collect/view.html
+++ b/sources/admin/container/collect/view.html
@@ -21,10 +21,10 @@
             </div>
           </template>
         </el-table-column>
-        <el-table-column label="收藏时间" width="180">
+        <el-table-column label="收藏时间" width="100">
           <template scope="scope">
             <div class="over_space">
-              <span v-bind:title="scope.row.collect_date">{{scope.row.collect_date}}</span>
+              <span v-bind:title="scope.row.collect_date">{{scope.row.collect_date | formatDate}}</span>
             </div>
           </template>
         </el-table-column>
