--- a/sources/admin/container/need/view.html
+++ b/sources/admin/container/need/view.html
@@ -28,10 +28,10 @@
             </div>
           </template>
         </el-table-column>
-        <el-table-column label="时间" width="180">
+        <el-table-column label="时间" width="100">
           <template scope="scope">
             <div class="over_space">
-              <span v-bind:title="scope.row.create_time">{{scope.row.create_time}}</span>
+              <span v-bind:title="scope.row.create_time">{{scope.row.create_time | formatDate}}</span>
             </div>
           </template>
         </el-table-column>
