BUG #47967 【数据目录】申请数据，申请同一个资源的未被申请过的数据项不输入直接点击完成没有反应 BUG #48193 【数据目录】【系统实时动态数据资源】字段大于五个的表，未显示其全部的字段 BUG #48158 BUG #48197 【互动交流】用户手册

--- a/sources/catalog/system-dynamic-details/view.html
+++ b/sources/catalog/system-dynamic-details/view.html
@@ -50,6 +50,9 @@
               </template>
             </el-table-column>
           </el-table>
+          <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="5" layout="total, prev, pager, next, jumper"
+            :total="totalResource">
+          </el-pagination>
 				</el-tab-pane>
 				 <el-tab-pane label="关联资源" name="interfaceinfo">
 					 <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
