--- a/sources/interaction/view.html
+++ b/sources/interaction/view.html
@@ -4,6 +4,7 @@
       <p class="route-guid">当前位置：<span>互动交流</span></p>
     </el-col>
   </el-row>
+  <div class="body">
   <el-row>
     <el-col :span="6">
       <div class="left">
@@ -16,4 +17,5 @@
       </div>
     </el-col>
   </el-row>
+  </div>
 </main>
