--- a/sources/catalog/details/view.html
+++ b/sources/catalog/details/view.html
@@ -195,19 +195,19 @@
   </el-dialog>
   <!--申请数据-->
   <el-dialog title="申请数据" :visible.sync="dialogApplyVisible" size="small" class="apply-dialog">
-    <el-form :model="applyForm" :rules="formRules" ref="applyForm" label-width="90px" class="demo-ruleForm">
-      <el-form-item label="访问次数" prop="count">
+    <el-form :model="applyForm" :rules="formRules" ref="applyForm" label-width="100px" class="demo-ruleForm">
+      <el-form-item label="访问次数" prop="count" label-suffix="sfdfsd">
         <el-col :span="11">
           <el-input v-model="applyForm.count"></el-input>
         </el-col>
       </el-form-item>
-      <el-form-item label="访问时间段">
+      <el-form-item label="访问时间段" prop="timeRange" label-suffix="sfdfsd">
         <el-col :span="11">
           <el-date-picker v-model="applyForm.timeRange" type="datetimerange" editable="editable" placeholder="选择时间范围">
           </el-date-picker>
         </el-col>
       </el-form-item>
-      <el-form-item label="申请理由">
+      <el-form-item label="申请理由" prop="description" label-suffix="sfdfsd">
         <el-input type="textarea" :rows="6" placeholder="请详细填写申请理由" v-model="applyForm.description"></el-input>
       </el-form-item>
     </el-form>
