BUG #48030 【专题应用、开发者中心】点击访问链接后刷新页面，访问次数位置没记录，还是0

--- a/sources/subject/view.html
+++ b/sources/subject/view.html
@@ -42,7 +42,7 @@
               </div>
             </el-col>
             <el-col :span="4">
-              <div class="grid-content">
+              <div class="grid-content" @click="count(current_item.id)">
                 <a class="item-link el-button el-button--primary" :href="current_item.url" target="_blank"><i class="fa fa-link"></i>&nbsp;访问链接</a>
               </div>
             </el-col>
