--- a/sources/catalog/economy-extend-resourses/view.html
+++ b/sources/catalog/economy-extend-resourses/view.html
@@ -40,17 +40,38 @@
       </div>
     </div>
     <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
-      <el-table-column prop="dataset_name" label="信息资源名称"></el-table-column>
-      <el-table-column prop="share_type" label="共享类型"></el-table-column>
-      <el-table-column prop="is_open" label="开放类型"></el-table-column>
-      <el-table-column prop="dept_name" label="来源部门">
+      <el-table-column  label="信息资源名称">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.dataset_name">{{scope.row.dataset_name}}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column  label="共享类型">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.share_type">{{scope.row.share_type}}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column  label="开放类型">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.is_open">{{scope.row.is_open}}</span>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="来源部门">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.dept_name">{{scope.row.dept_name}}</span>
+          </div>
+        </template>
       </el-table-column>
       <el-table-column label="更新时间">
         <template scope="scope">
           {{ scope.row.update_time | formatDate }}
         </template>
-      </el-table-column>
-      <el-table-column prop="dept_name" label="来源部门">
       </el-table-column>
       <el-table-column label="详情" width="80">
         <template slot-scope="scope">
